reference/7.0/Microsoft.PowerShell.Management/New-Service.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 11/18/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/new-service?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: New-Service
ms.openlocfilehash: 7ba9bf66295bcbc2d8f7b7f94007b3fb673882fb
ms.sourcegitcommit: 22c93550c87af30c4895fcb9e9dd65e30d60ada0
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 11/19/2020
ms.locfileid: "94890967"
---
# <span data-ttu-id="96bc6-102">New-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-102">New-Service</span></span>

## <span data-ttu-id="96bc6-103">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="96bc6-103">SYNOPSIS</span></span>
<span data-ttu-id="96bc6-104">Cria um novo serviço do Windows.</span><span class="sxs-lookup"><span data-stu-id="96bc6-104">Creates a new Windows service.</span></span>

## <span data-ttu-id="96bc6-105">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="96bc6-105">SYNTAX</span></span>

```
New-Service [-Name] <String> [-BinaryPathName] <String> [-DisplayName <String>] [-Description <String>]
 [-SecurityDescriptorSddl <String>] [-StartupType <ServiceStartupType>] [-Credential <PSCredential>]
 [-DependsOn <String[]>] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## <span data-ttu-id="96bc6-106">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="96bc6-106">DESCRIPTION</span></span>

<span data-ttu-id="96bc6-107">O `New-Service` cmdlet cria uma nova entrada para um serviço do Windows no registro e no banco de dados de serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-107">The `New-Service` cmdlet creates a new entry for a Windows service in the registry and in the service database.</span></span> <span data-ttu-id="96bc6-108">Um novo serviço requer um arquivo executável que é executado durante o serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-108">A new service requires an executable file that runs during the service.</span></span>

<span data-ttu-id="96bc6-109">Os parâmetros desse cmdlet permitem definir o nome de exibição, a descrição, o tipo de inicialização e as dependências do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-109">The parameters of this cmdlet let you set the display name, description, startup type, and dependencies of the service.</span></span>

## <span data-ttu-id="96bc6-110">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="96bc6-110">EXAMPLES</span></span>

### <span data-ttu-id="96bc6-111">Exemplo 1: criar um serviço</span><span class="sxs-lookup"><span data-stu-id="96bc6-111">Example 1: Create a service</span></span>

```powershell
New-Service -Name "TestService" -BinaryPathName '"C:\WINDOWS\System32\svchost.exe -k netsvcs"'
```

<span data-ttu-id="96bc6-112">Este comando cria um serviço chamado TestService.</span><span class="sxs-lookup"><span data-stu-id="96bc6-112">This command creates a service named TestService.</span></span>

### <span data-ttu-id="96bc6-113">Exemplo 2: criar um serviço que inclui descrição, tipo de inicialização e nome de exibição</span><span class="sxs-lookup"><span data-stu-id="96bc6-113">Example 2: Create a service that includes description, startup type, and display name</span></span>

```powershell
$params = @{
  Name = "TestService"
  BinaryPathName = '"C:\WINDOWS\System32\svchost.exe -k netsvcs"'
  DependsOn = "NetLogon"
  DisplayName = "Test Service"
  StartupType = "Manual"
  Description = "This is a test service."
}
New-Service @params
```

<span data-ttu-id="96bc6-114">Este comando cria um serviço chamado TestService.</span><span class="sxs-lookup"><span data-stu-id="96bc6-114">This command creates a service named TestService.</span></span> <span data-ttu-id="96bc6-115">Ele usa os parâmetros de `New-Service` para especificar uma descrição, um tipo de inicialização e um nome de exibição para o novo serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-115">It uses the parameters of `New-Service` to specify a description, startup type, and display name for the new service.</span></span>

### <span data-ttu-id="96bc6-116">Exemplo 3: exibir o novo serviço</span><span class="sxs-lookup"><span data-stu-id="96bc6-116">Example 3: View the new service</span></span>

```powershell
Get-CimInstance -ClassName Win32_Service -Filter "Name='testservice'"
```

```Output
ExitCode  : 0
Name      : testservice
ProcessId : 0
StartMode : Auto
State     : Stopped
Status    : OK
```

<span data-ttu-id="96bc6-117">Esse comando usa `Get-CimInstance` para obter o objeto de **Win32_Service** para o novo serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-117">This command uses `Get-CimInstance` to get the **Win32_Service** object for the new service.</span></span> <span data-ttu-id="96bc6-118">Este objeto inclui o modo de início e a descrição do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-118">This object includes the start mode and the service description.</span></span>

### <span data-ttu-id="96bc6-119">Exemplo 4: definir o SecurityDescriptor de um serviço ao criar.</span><span class="sxs-lookup"><span data-stu-id="96bc6-119">Example 4: Set the SecurityDescriptor of a service when creating.</span></span>

<span data-ttu-id="96bc6-120">Este exemplo adiciona o **SecurityDescriptor** do serviço que está sendo criado.</span><span class="sxs-lookup"><span data-stu-id="96bc6-120">This example adds the **SecurityDescriptor** of the service being created.</span></span>

```powershell
$SDDL = "D:(A;;CCLCSWRPWPDTLOCRRC;;;SY)(A;;CCDCLCSWRPWPDTLOCRSDRCWDWO;;;BA)(A;;CCLCSWLOCRRC;;;SU)"
$params = @{
  BinaryPathName = '"C:\WINDOWS\System32\svchost.exe -k netsvcs"'
  DependsOn = "NetLogon"
  DisplayName "Test Service"
  StartupType = "Manual"
  Description = "This is a test service."
  SecurityDescriptorSddl = $SDDL
}
New-Service @params
```

<span data-ttu-id="96bc6-121">O **SecurityDescriptor** é armazenado na `$SDDLToSet` variável.</span><span class="sxs-lookup"><span data-stu-id="96bc6-121">The **SecurityDescriptor** is stored in the `$SDDLToSet` variable.</span></span> <span data-ttu-id="96bc6-122">O parâmetro **SecurityDescriptorSddl** usa `$SDDL` para definir o **SecurityDescriptor** do novo serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-122">The **SecurityDescriptorSddl** parameter uses `$SDDL` to set the **SecurityDescriptor** of the new service.</span></span>

## <span data-ttu-id="96bc6-123">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="96bc6-123">PARAMETERS</span></span>

### <span data-ttu-id="96bc6-124">-BinaryPathName</span><span class="sxs-lookup"><span data-stu-id="96bc6-124">-BinaryPathName</span></span>

<span data-ttu-id="96bc6-125">Especifica o caminho do arquivo executável para o serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-125">Specifies the path of the executable file for the service.</span></span> <span data-ttu-id="96bc6-126">Este parâmetro é necessário.</span><span class="sxs-lookup"><span data-stu-id="96bc6-126">This parameter is required.</span></span>

<span data-ttu-id="96bc6-127">O caminho totalmente qualificado para o arquivo binário do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-127">The fully qualified path to the service binary file.</span></span> <span data-ttu-id="96bc6-128">Se o caminho contiver um espaço, ele deverá estar entre aspas para que seja interpretado corretamente.</span><span class="sxs-lookup"><span data-stu-id="96bc6-128">If the path contains a space, it must be quoted so that it is correctly interpreted.</span></span> <span data-ttu-id="96bc6-129">Por exemplo, `d:\my share\myservice.exe` deve ser especificado como `'"d:\my share\myservice.exe"'` .</span><span class="sxs-lookup"><span data-stu-id="96bc6-129">For example, `d:\my share\myservice.exe` should be specified as `'"d:\my share\myservice.exe"'`.</span></span>

<span data-ttu-id="96bc6-130">O caminho também pode incluir argumentos para um serviço de início automático.</span><span class="sxs-lookup"><span data-stu-id="96bc6-130">The path can also include arguments for an auto-start service.</span></span> <span data-ttu-id="96bc6-131">Por exemplo, `'"d:\myshare\myservice.exe arg1 arg2"'`.</span><span class="sxs-lookup"><span data-stu-id="96bc6-131">For example, `'"d:\myshare\myservice.exe arg1 arg2"'`.</span></span> <span data-ttu-id="96bc6-132">Esses argumentos são passados para o ponto de entrada de serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-132">These arguments are passed to the service entry point.</span></span>

<span data-ttu-id="96bc6-133">Para obter mais informações, consulte o parâmetro **lpBinaryPathName** da API [CreateServiceW](/windows/win32/api/winsvc/nf-winsvc-createservicew) .</span><span class="sxs-lookup"><span data-stu-id="96bc6-133">For more information, see the **lpBinaryPathName** parameter of [CreateServiceW](/windows/win32/api/winsvc/nf-winsvc-createservicew) API.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: Path

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-134">-Credential</span><span class="sxs-lookup"><span data-stu-id="96bc6-134">-Credential</span></span>

<span data-ttu-id="96bc6-135">Especifica a conta usada pelo serviço como a [conta de logon de serviço](/windows/desktop/ad/about-service-logon-accounts).</span><span class="sxs-lookup"><span data-stu-id="96bc6-135">Specifies the account used by the service as the [Service Logon Account](/windows/desktop/ad/about-service-logon-accounts).</span></span>

<span data-ttu-id="96bc6-136">Digite um nome de usuário, como **User01** ou **Domínio01 \ Usuário01**, ou insira um objeto **PSCredential** , como um gerado pelo `Get-Credential` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="96bc6-136">Type a user name, such as **User01** or **Domain01\User01**, or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span> <span data-ttu-id="96bc6-137">Se você digitar um nome de usuário, esse cmdlet solicitará uma senha.</span><span class="sxs-lookup"><span data-stu-id="96bc6-137">If you type a user name, this cmdlet prompts you for a password.</span></span>

<span data-ttu-id="96bc6-138">As credenciais são armazenadas em um objeto [PSCredential](/dotnet/api/system.management.automation.pscredential) e a senha é armazenada como uma [SecureString](/dotnet/api/system.security.securestring).</span><span class="sxs-lookup"><span data-stu-id="96bc6-138">Credentials are stored in a [PSCredential](/dotnet/api/system.management.automation.pscredential) object and the password is stored as a [SecureString](/dotnet/api/system.security.securestring).</span></span>

> [!NOTE]
> <span data-ttu-id="96bc6-139">Para obter mais informações sobre a proteção de dados **SecureString** , consulte [quão seguro é a SecureString?](/dotnet/api/system.security.securestring#how-secure-is-securestring).</span><span class="sxs-lookup"><span data-stu-id="96bc6-139">For more information about **SecureString** data protection, see [How secure is SecureString?](/dotnet/api/system.security.securestring#how-secure-is-securestring).</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-140">-Depende</span><span class="sxs-lookup"><span data-stu-id="96bc6-140">-DependsOn</span></span>

<span data-ttu-id="96bc6-141">Especifica os nomes de outros serviços dos quais o novo serviço depende.</span><span class="sxs-lookup"><span data-stu-id="96bc6-141">Specifies the names of other services upon which the new service depends.</span></span> <span data-ttu-id="96bc6-142">Para digitar vários nomes de serviço, use uma vírgula para separar os nomes.</span><span class="sxs-lookup"><span data-stu-id="96bc6-142">To enter multiple service names, use a comma to separate the names.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-143">-Description</span><span class="sxs-lookup"><span data-stu-id="96bc6-143">-Description</span></span>

<span data-ttu-id="96bc6-144">Especifica uma descrição do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-144">Specifies a description of the service.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-145">-DisplayName</span><span class="sxs-lookup"><span data-stu-id="96bc6-145">-DisplayName</span></span>

<span data-ttu-id="96bc6-146">Especifica um nome de exibição para o serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-146">Specifies a display name for the service.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-147">-Name</span><span class="sxs-lookup"><span data-stu-id="96bc6-147">-Name</span></span>

<span data-ttu-id="96bc6-148">Especifica o nome do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-148">Specifies the name of the service.</span></span> <span data-ttu-id="96bc6-149">Este parâmetro é necessário.</span><span class="sxs-lookup"><span data-stu-id="96bc6-149">This parameter is required.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: ServiceName

Required: True
Position: 0
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-150">-StartupType</span><span class="sxs-lookup"><span data-stu-id="96bc6-150">-StartupType</span></span>

<span data-ttu-id="96bc6-151">Define o tipo de inicialização do serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-151">Sets the startup type of the service.</span></span> <span data-ttu-id="96bc6-152">Os valores aceitáveis para esse parâmetro são:</span><span class="sxs-lookup"><span data-stu-id="96bc6-152">The acceptable values for this parameter are:</span></span>

- <span data-ttu-id="96bc6-153">**Automático** -o serviço é iniciado ou iniciado pelo sistema operacional, na inicialização do sistema.</span><span class="sxs-lookup"><span data-stu-id="96bc6-153">**Automatic** - The service is started or was started by the operating system, at system start-up.</span></span>
  <span data-ttu-id="96bc6-154">Se um serviço iniciado automaticamente depende de um serviço iniciado manualmente, o serviço iniciado manualmente também é iniciado automaticamente na inicialização do sistema.</span><span class="sxs-lookup"><span data-stu-id="96bc6-154">If an automatically started service depends on a manually started service, the manually started service is also started automatically at system startup.</span></span>
- <span data-ttu-id="96bc6-155">**AutomaticDelayedStart** -inicia logo após a inicialização do sistema.</span><span class="sxs-lookup"><span data-stu-id="96bc6-155">**AutomaticDelayedStart** - Starts shortly after the system boots.</span></span>
- <span data-ttu-id="96bc6-156">**Desabilitado** -o serviço está desabilitado e não pode ser iniciado por um usuário ou aplicativo.</span><span class="sxs-lookup"><span data-stu-id="96bc6-156">**Disabled** - The service is disabled and cannot be started by a user or application.</span></span>
- <span data-ttu-id="96bc6-157">**Inválidos** -esse valor não tem suporte.</span><span class="sxs-lookup"><span data-stu-id="96bc6-157">**InvalidValue** - This value is not supported.</span></span> <span data-ttu-id="96bc6-158">O uso desse valor resulta em um erro.</span><span class="sxs-lookup"><span data-stu-id="96bc6-158">Using this value results in an error.</span></span>
- <span data-ttu-id="96bc6-159">**Manual** -o serviço é iniciado apenas manualmente, por um usuário, usando o Gerenciador de controle de serviço ou por um aplicativo.</span><span class="sxs-lookup"><span data-stu-id="96bc6-159">**Manual** - The service is started only manually, by a user, using the Service Control Manager, or by an application.</span></span>

 <span data-ttu-id="96bc6-160">O valor padrão é **automático**.</span><span class="sxs-lookup"><span data-stu-id="96bc6-160">The default value is **Automatic**.</span></span>

```yaml
Type: Microsoft.PowerShell.Commands.ServiceStartupType
Parameter Sets: (All)
Aliases:
Accepted values: Automatic, Manual, Disabled, AutomaticDelayedStart, InvalidValue

Required: False
Position: Named
Default value: Automatic
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-161">-SecurityDescriptorSddl</span><span class="sxs-lookup"><span data-stu-id="96bc6-161">-SecurityDescriptorSddl</span></span>

<span data-ttu-id="96bc6-162">Especifica o **SecurityDescriptor** para o serviço no formato **SDDL** .</span><span class="sxs-lookup"><span data-stu-id="96bc6-162">Specifies the **SecurityDescriptor** for the service in **Sddl** format.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: sd

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-163">-Confirm</span><span class="sxs-lookup"><span data-stu-id="96bc6-163">-Confirm</span></span>

<span data-ttu-id="96bc6-164">Solicita sua confirmação antes de executar o cmdlet.</span><span class="sxs-lookup"><span data-stu-id="96bc6-164">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-165">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="96bc6-165">-WhatIf</span></span>

<span data-ttu-id="96bc6-166">Mostra o que aconteceria se o cmdlet fosse executado.</span><span class="sxs-lookup"><span data-stu-id="96bc6-166">Shows what would happen if the cmdlet runs.</span></span> <span data-ttu-id="96bc6-167">O cmdlet não é executado.</span><span class="sxs-lookup"><span data-stu-id="96bc6-167">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="96bc6-168">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="96bc6-168">CommonParameters</span></span>

<span data-ttu-id="96bc6-169">Este cmdlet oferece suporte aos parâmetros comuns: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction e -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="96bc6-169">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="96bc6-170">Para obter mais informações, confira [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span><span class="sxs-lookup"><span data-stu-id="96bc6-170">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="96bc6-171">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="96bc6-171">INPUTS</span></span>

### <span data-ttu-id="96bc6-172">Nenhum</span><span class="sxs-lookup"><span data-stu-id="96bc6-172">None</span></span>

<span data-ttu-id="96bc6-173">Não é possível redirecionar a entrada para este cmdlet.</span><span class="sxs-lookup"><span data-stu-id="96bc6-173">You cannot pipe input to this cmdlet.</span></span>

## <span data-ttu-id="96bc6-174">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="96bc6-174">OUTPUTS</span></span>

### <span data-ttu-id="96bc6-175">System.ServiceProcess.ServiceController</span><span class="sxs-lookup"><span data-stu-id="96bc6-175">System.ServiceProcess.ServiceController</span></span>

<span data-ttu-id="96bc6-176">Esse cmdlet retorna um objeto que representa o novo serviço.</span><span class="sxs-lookup"><span data-stu-id="96bc6-176">This cmdlet returns an object that represents the new service.</span></span>

## <span data-ttu-id="96bc6-177">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="96bc6-177">NOTES</span></span>

<span data-ttu-id="96bc6-178">Esse cmdlet só está disponível em plataformas Windows.</span><span class="sxs-lookup"><span data-stu-id="96bc6-178">This cmdlet is only available on Windows platforms.</span></span>

<span data-ttu-id="96bc6-179">Para executar esse cmdlet, inicie o PowerShell usando a opção **Executar como administrador** .</span><span class="sxs-lookup"><span data-stu-id="96bc6-179">To run this cmdlet, start PowerShell by using the **Run as administrator** option.</span></span>

## <span data-ttu-id="96bc6-180">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="96bc6-180">RELATED LINKS</span></span>

[<span data-ttu-id="96bc6-181">Get-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-181">Get-Service</span></span>](Get-Service.md)

[<span data-ttu-id="96bc6-182">Restart-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-182">Restart-Service</span></span>](Restart-Service.md)

[<span data-ttu-id="96bc6-183">Resume-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-183">Resume-Service</span></span>](Resume-Service.md)

[<span data-ttu-id="96bc6-184">Set-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-184">Set-Service</span></span>](Set-Service.md)

[<span data-ttu-id="96bc6-185">Start-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-185">Start-Service</span></span>](Start-Service.md)

[<span data-ttu-id="96bc6-186">Stop-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-186">Stop-Service</span></span>](Stop-Service.md)

[<span data-ttu-id="96bc6-187">Suspend-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-187">Suspend-Service</span></span>](Suspend-Service.md)

[<span data-ttu-id="96bc6-188">Remove-Service</span><span class="sxs-lookup"><span data-stu-id="96bc6-188">Remove-Service</span></span>](Remove-Service.md)
